JumpScript/tests/baselines/reference/classWithTwoConstructorDefinitions.errors.txt
tests/cases/conformance/classes/constructorDeclarations/classWithTwoConstructorDefinitions.jump(2,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/conformance/classes/constructorDeclarations/classWithTwoConstructorDefinitions.jump(3,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/conformance/classes/constructorDeclarations/classWithTwoConstructorDefinitions.jump(7,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/conformance/classes/constructorDeclarations/classWithTwoConstructorDefinitions.jump(8,5): error TS2392: Multiple constructor implementations are not allowed.


==== tests/cases/conformance/classes/constructorDeclarations/classWithTwoConstructorDefinitions.jump (4 errors) ====
    class C {
        constructor() { } // error
        ~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(x) { } // error
        ~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
    }
    
    class D<T> {
        constructor(x: T) { } // error
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(x: T, y: T) { } // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
    }